=== Alexander-33 ===

2002-11-20  Darin Adler  <darin@apple.com>

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]):
	Unescape the string before executing it, so we don't suffer from bug 3083043
	here in the javascript: URLs that come from plug-ins.

        * English.lproj/StringsNotToBeLocalized.txt: Update.

2002-11-20  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3079134 - Throttle plug-ins while in background

        * Plugins.subproj/WebBaseNetscapePluginView.h:
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView sendNullEvent]): new
        (-[WebBaseNetscapePluginView stopNullEvents]): stops timer
        (-[WebBaseNetscapePluginView restartNullEvents]): stops timer if there is one, and starts a new one based on window activation state
        (-[WebBaseNetscapePluginView start]): call restartNullEvents
        (-[WebBaseNetscapePluginView stop]): call stopNullEvents
        (-[WebBaseNetscapePluginView windowBecameKey:]): call restartNullEvents
        (-[WebBaseNetscapePluginView windowResignedKey:]): call restartNullEvents
        (-[WebBaseNetscapePluginView windowDidMiniaturize:]): call stopNullEvents
        (-[WebBaseNetscapePluginView windowDidDeminiaturize:]): call restartNullEvents
        * Plugins.subproj/WebNetscapePluginNullEventSender.h: Removed. No need for another class, use a timer.
        * Plugins.subproj/WebNetscapePluginNullEventSender.m: Removed. No need for another class, use a timer.
        * WebKit.pbproj/project.pbxproj:

2002-11-20  Richard Williamson   <rjw@apple.com>

        Fixed 3107007.  Letter-spacing is causing width to be miscalculated.
        This also fixed some selection problems.
        
        * WebCoreSupport.subproj/WebTextRenderer.m: